# calendar-service

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
calendar_service/: main.py
calendar_service/api/: events.py
calendar_service/db/: repositories.py
calendar_service/models/: event.py
calendar_service/services/: event_service.py
tests/: conftest.py  test_api.py  test_models.py  test_repositories.py  test_services.py
