[tool.poetry]
name = "calendar-service"
version = "0.1.0"
description = "Calendar API"
authors = ["Kevin Young <kevinyoung1399@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.115.7,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.34.0,<0.35.0"}
pydantic = ">=2.0.0"
pytest = ">=7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]